feat: integrate XML flattening runtime and duplicate handling